--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <section id="about" class="view section">
     <div class="section__inner about">
       <div class="about__photo">
-        <img src="https://media.discordapp.net/attachments/520384014704443395/1403820028360658974/138daaee-4b1a-48d0-b50a-4100dfdc168c.jpg?ex=6898f0c8&is=68979f48&hm=935695f95cf710658d0214612f0893d539435a80e6a7743016628317228f8193&=&format=webp&width=553&height=829" alt="Felipe Villacrés" />
+        <img src="assets/images/yo.jpg" alt="Felipe Villacrés" />
       </div>
       <div class="about__content">
         <h2>About Me</h2>
