--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           </p>
 
           <div class="about__actions">
-            <button class="toggle-btn" data-target="skills" aria-expanded="false">Skills</button>
-            <button class="toggle-btn" data-target="education" aria-expanded="false">Education</button>
+             <button type="button" class="toggle-btn" data-target="skills" aria-expanded="false">Skills</button>
+             <button type="button" class="toggle-btn" data-target="education" aria-expanded="false">Education</button>
           </div>
 
           <div id="skills" class="collapsible">
@@ -214,5 +214,6 @@
     <span>© <span id="y"></span> Felipe Villacrés</span>
     <span class="muted">Built with HTML • CSS • JS</span>
   </footer>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
