--- a/index.html
+++ b/index.html
@@ -160,6 +160,34 @@
               </a>
             </div>
           </div>
+          <div class="card-wrap" style="display:flex;flex-direction:column;align-items:flex-start">
+            <article class="card" style="position:relative;width:100%">
+              <a
+                class="card__overlay"
+                href="https://personal-finance-tracker-7jwb3f14v-felipes-projects-552ea1d5.vercel.app/"
+                target="_blank"
+                rel="noopener"
+                style="position:absolute;inset:0;z-index:1"
+              ></a>
+              <div class="thumb">
+                <img
+                  src="assets/images/PFT.png"
+                  alt="Climate Solutions project screenshot"
+                  style="width:100%;height:100%;object-fit:cover"
+                />
+              </div>
+              <div class="card__body">
+                <h3>Personal Finance Tracker</h3>
+                <div class="tech">React • Vite • Node.js • Express • MongoDB</div>
+                <p class="muted">
+                  A full-stack MERN application to track income, expenses, and monthly balances with charts, dark mode, and savings goals.
+                </p>
+              </div>
+            </article>
+            <div class="links" style="margin-top:8px">
+              <a class="tag" href="https://github.com/felipev1005/Personal-Finance-Tracker" target="_blank" rel="noopener">Repo</a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
